tests/suite/fail/generated/stdlib_import/fail_stdlib__typo_prelude.ny.ny
//~ ERROR import not found
import "stdlib/typo_prelude.ny"
fn main() {
    print(0)
}
